Include TracingBeam scrollbar from Aceternity UI. Addresses issue #18.

--- a/jsSrc/next-frontend/globals.css
+++ b/jsSrc/next-frontend/globals.css
@@ -7,6 +7,24 @@
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
 
+:root {
+  --animate-emerald-500: #10B981;
+  /* Then use it in your animations */
+  animation: color-change 1s infinite;
+  @keyframes color-change {
+    0% {
+      background-color: var(--animate-emerald-500);
+    }
+
+    50% {
+      background-color: #fff;
+    }
+
+    100% {
+      background-color: var(--animate-emerald-500);
+    }
+  }
+}
 
 *,
 ::before,
@@ -45,7 +63,7 @@ html,
   -moz-tab-size: 4;
   /* 3 */
   -o-tab-size: 4;
-     tab-size: 4;
+  tab-size: 4;
   /* 3 */
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
@@ -90,7 +108,7 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 
 abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
 }
 
 /*
@@ -654,7 +672,7 @@ video {
 
 .bg-clip-text {
   -webkit-background-clip: text;
-          background-clip: text;
+  background-clip: text;
 }
 
 .px-2 {
@@ -727,14 +745,6 @@ video {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 25, 25, 25;
-    --background-end-rgb: 0, 0, 0;
-  }
 }
 
 body {
